--- a/FetchExample/Views/Home/Index.cshtml
+++ b/FetchExample/Views/Home/Index.cshtml
@@ -1,14 +1,19 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
 <div class="row">
     <div>Select a County:</div>
     <select id="counties"></select>
 
-
     <div>Cities:</div>
     <select id="cities"></select>
+
+</div>
+<div class="row">
+    <div>Select a School:</div>
+    <select id="schools"></select>
+
+
 </div>
 
 @section scripts {
