--- a/FetchExample/Views/Home/Index.cshtml
+++ b/FetchExample/Views/Home/Index.cshtml
@@ -11,12 +11,13 @@
     <div>Select a Continent:</div>
     <select id="continents"></select>
 
-    <div>Select a Country:</div>
+    <div>Countries:</div>
     <select id="countries"></select>
 
 </div>
 <div class="row">
     
+
 
 </div>
 
@@ -51,6 +52,7 @@
         function clearCities() {
             $("#cities").empty();
         }
+
 
         $(function () {
             loadContinents();
